Portfolio bijna af.

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/scss/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-light menu">
     <div class="container">
         <a class="navbar-brand" href="/">
-            <img src="../images/LogoMj.png" alt="logo_mj" height="50" width="50">
+            <img src="../images/LogoMj.png" alt="logo_mj" height="75" width="75">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,9 +34,6 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">Wie ben ik</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="hobby.html">Hobby's</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="skills.html">Skills</a>
@@ -71,7 +68,7 @@
           </div>
         </div>
         <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
-          <i class="fa skill-fa" style="font-family: arial;">C#</i>
+          <i class="fa skill-fa" style="font-family: arial;">.NET</i>
           <div class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -116,6 +113,139 @@
             </p>
           </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+            <div class="row">
+              <i class="fa-brands fa-linux rounded-circle skill-fa2"></i>
+            <i class="fa-brands fa-ubuntu rounded-circle skill-fa2"></i>
+            </div>
+          <div class="rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Linux webserver</h5>
+            <p class="card-text">Een website maken is een leuke manier om mijn ideeën met de wereld te delen. Met mijn
+              kennis van HTML5 en CSS is het voor mij fijn om dit mogelijk te maken. Om mijn stijlen herbruikbaar te
+              maken, vervang ik CSS met SASS.</p>
+          </div>
+        </div>
+        <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+          <div class="row">
+            <i class="fa-brands fa-php skill-fa2"></i>
+          <i class="fa-brands fa-laravel skill-fa2"></i>
+          </div>
+          <div class="rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Laravel</h5>
+            <p class="card-text">Wil ik een Deskstop applicatie, een Webapplicatie of een Wep API maken, dan is C# de
+              beste programmeertaal voor mij. Hetzij .NET Entity Framework of .NET Core, daar maak ik mijn laptop zeker
+              voor open.</p>
+          </div>
+        </div>
+        <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+          <i class="fa-brands fa-react skill-fa"></i>
+          <div class="rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">React</h5>
+            <p class="card-text">
+              Als programmeurs, maken wij bij het ontwikkelen van applicaties meestal gebruik van data. Met mijn kennis van relationele databanken,
+               is het makkelijker om gebruiksvriendelijke applicaties te ontwikkelen.
+            </p>
+          </div>
+        </div>
+        <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+          <i class="fa-brands fa-docker skill-fa"></i>
+          <div class="rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">DevOps</h5>
+            <p class="card-text">
+              Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+               begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
+            </p>
+          </div>
+        </div>
+        <!-- test -->
+        <div class="row">
+          <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+            <i class="fa-brands fa-java skill-fa"></i>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Java</h5>
+              <p class="card-text">
+                Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+                 begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
+              </p>
+            </div>
+          </div>
+          <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+            <i class="fa-brands fa-python skill-fa"></i>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Python</h5>
+              <p class="card-text">
+                Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+                 begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
+              </p>
+            </div>
+          </div>
+          <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+            <i class="fa skill-fa" style="font-family: arial;">Ts</i>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Typescript</h5>
+              <p class="card-text">
+                Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+                 begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
+              </p>
+            </div>
+          </div>
+          <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
+            <i class="fa-brands fa-sass skill-fa"></i>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">SASS</h5>
+              <p class="card-text">
+                Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+                 begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
+              </p>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </section>
   </div>
@@ -241,7 +371,7 @@
           <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
           <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+          <li><a href="https://github.com/murrelvenlo" target="_blank"><i class="fa fa-github"></i></a></li>
           <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
         </ul>
       </section>
