--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="scss/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-light menu">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="images/LogoMj.png" alt="logo_mj" height="50" width="50">
+        <img src="images/LogoMj.png" alt="logo_mj" height="75" width="75">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,9 +27,6 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/pages/about.html">Wie ben ik</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/pages/skills.html">Skills</a>
@@ -69,6 +66,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <canvas id="canvas"></canvas>
+    </div>
   </section>
   <div class="container">
     <footer class="foot">
@@ -78,7 +78,7 @@
                 class="fa fa-facebook-f"></i></a></li>
           <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+          <li><a href="https://github.com/murrelvenlo" target="_blank"><i class="fa fa-github"></i></a></li>
           <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i
                 class="fa fa-linkedin-square"></i></a></li>
         </ul>
