--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/scss/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <img src="../images/LogoMj.png" alt="logo_mj" height="50" width="50">
+                <img src="../images/LogoMj.png" alt="logo_mj" height="75" width="75">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,9 +29,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">Wie ben ik</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="hobby.html">Hobby's</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="skills.html">Skills</a>
@@ -185,7 +182,7 @@
                     <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
                     <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+                    <li><a href="https://github.com/murrelvenlo" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
                   </ul>
             </section>
