--- a/pages/stage.html
+++ b/pages/stage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/scss/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
@@ -16,7 +16,30 @@
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container">
+            <a class="navbar-brand" href="/">
+                <img src="../images/LogoMj.png" alt="logo_mj" height="75" width="75">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">Wie ben ik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container stage">
         <div class="row">
             <!--Accordion-->
@@ -226,7 +249,7 @@
                     </li>
                     <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i
                                 class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+                    <li><a href="https://github.com/murrelvenlo" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i
                                 class="fa fa-linkedin-square"></i></a></li>
                 </ul>
