--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/scss/style.css"> -->
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
-        integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
-        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+    integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="/images/icon.ico" type="image/x-icon">
     <title>Portfolio</title>
 </head>
@@ -175,8 +180,32 @@
                     </div>
                 </div>
             </div>
+            <div class="row php">
+                <div class="card" style="width: 50%; margin: auto;">
+                    <div class="card-header text-center">
+                        <i class="fa-brands fa-laravel"></i>
+                        <i class="fa-brands fa-php"></i>
+                    </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Project PHP</h5>
+                    <h6 class="card-subtitle">Achtergrondinformatie</h6>
+                    <p class="card-text">Ons project betreft de ontwikkeling van een webapplicatie waarmee ouders hun kinderen kunnen inschrijven voor hockeylessen. De applicatie voorziet in verschillende gebruikersrollen met bijbehorende rechten.</p>
+                    <h6 class="card-subtitle">Technologie</h6>
+                    <p class="card-text">Voor de ontwikkeling van de applicatie maken we gebruik van Laravel, een PHP-framework, en Tailwind als 'styling library'.</p>
+                    <div class="p-info">
+                        <p><em>Als je meer over deze applicatie wil weten kan je best naar mijn <span class="gh"><a href="https://github.com/itfactory-tm/2023-ProjectPHP-304" target="_blank">GitHub-pagina</a></span>.</em></p>
+                    </div>
+                  </div>
+                  <div class="card-footer text-muted">work in progress</div>
+                  <div class="card-hover-images">
+                    <div class="card-hover-image1"></div>
+                    <div class="card-hover-image2"></div>
+                  </div>
+                </div>
+              </div>
+              
         </section>
-
+                
         <footer class="foot">
             <section class="ft-social">
                 <ul class="ft-social-list">
@@ -189,7 +218,7 @@
             </section>
             <section class="ft-copy">
                 <div class="sec-copy">
-                    <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+                    <p>&copy; 2023 Ontwerper: Murrel Venlo</p>
                 </div>
             </section>
         </footer>
@@ -578,7 +607,7 @@
             </div>
         </div>
     </div>
-    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
