--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -180,12 +180,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row php">
-                <div class="card" style="width: 50%; margin: auto;">
-                    <div class="card-header text-center">
-                        <i class="fa-brands fa-laravel"></i>
-                        <i class="fa-brands fa-php"></i>
-                    </div>
+            <div class="row php justify-content-center">
+                <div class="card col-md-8 col-lg-6">
+                  <div class="card-header text-center bg-info">
+                    <i class="fa-brands fa-laravel"></i>
+                    <i class="fa-brands fa-php"></i>
+                  </div>
                   <div class="card-body">
                     <h5 class="card-title">Project PHP</h5>
                     <h6 class="card-subtitle">Achtergrondinformatie</h6>
@@ -193,10 +193,10 @@
                     <h6 class="card-subtitle">Technologie</h6>
                     <p class="card-text">Voor de ontwikkeling van de applicatie maken we gebruik van Laravel, een PHP-framework, en Tailwind als 'styling library'.</p>
                     <div class="p-info">
-                        <p><em>Als je meer over deze applicatie wil weten kan je best naar mijn <span class="gh"><a href="https://github.com/itfactory-tm/2023-ProjectPHP-304" target="_blank">GitHub-pagina</a></span>.</em></p>
+                      <p><em>Als je meer over deze applicatie wil weten kan je best naar mijn <span class="gh"><a href="https://github.com/itfactory-tm/2023-ProjectPHP-304" target="_blank">GitHub-pagina</a></span>.</em></p>
                     </div>
                   </div>
-                  <div class="card-footer text-muted">work in progress</div>
+                  <div class="card-footer text-muted bg-info">work in progress</div>
                   <div class="card-hover-images">
                     <div class="card-hover-image1"></div>
                     <div class="card-hover-image2"></div>
